// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
    text="Error"
  />
</div>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    className="TextAreaField__area"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    optional={false}
    text="Label"
  />
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<div
  className="TextAreaField TestClass"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    optional={true}
    text="Label"
  />
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`TextAreaField rendering sets a random id if not provided 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    htmlFor="e1"
    text="Label"
  />
  <textarea
    className="TextAreaField__area TextAreaField--noresize"
    id="e1"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    alignment="right"
  />
</div>
`;
